# daichi

./: Cargo.toml  README.md  dockerfile
.github/workflows/: ci.yaml
daichi-commands/: Cargo.toml
daichi-commands/src/: about.rs  counter.rs  help.rs  lib.rs
daichi-commands/src/ficolo/: clean.rs  create.rs  mod.rs  overview.rs  setup.rs
daichi-commands/src/leaderboard/: change_afk.rs  delete.rs  mod.rs  replace.rs  role_button.rs  setup.rs
daichi-commands/src/owner/: clear_bot_msg.rs  mod.rs  register.rs  throw_error.rs
daichi-commands/src/vc_highlight/: join.rs  leave.rs  mod.rs  output.rs  play.rs
daichi-commands/src/voice_highlights/: join.rs  leave.rs  mod.rs  output.rs  play.rs
daichi-core/: Cargo.toml
daichi-core/src/: intents.rs  main.rs  setup.rs
daichi-handlers/: Cargo.toml
daichi-handlers/src/: lib.rs  on_error.rs
daichi-handlers/src/events/: counter.rs  ficolo.rs  mod.rs  ready.rs  role_button.rs  voice_event.rs
daichi-handlers/src/voice/: cache.rs  join.rs  leave.rs  mod.rs  play.rs
daichi-handlers/src/voice/events/: mod.rs  voice_tick.rs
daichi-leaderboard/: Cargo.toml
daichi-leaderboard/src/: lib.rs
daichi-models/: Cargo.toml
daichi-models/src/: counter.rs  ficolo_question.rs  ficolosetup.rs  guildsetup.rs  leaderboardsetup.rs  lib.rs  mongo_crud.rs  role_toggle.rs  user_dc_event.rs
daichi-utils/: Cargo.toml
daichi-utils/src/: button_selects.rs  checks.rs  lib.rs  sync_user_states.rs
daichi-utils/src/modals/: mod.rs  rounds.rs  standard.rs
src/: data.rs  error.rs  lib.rs  prelude.rs
