[package]
name = "daichi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
dotenvy = "0.15.7"
poise = { workspace = true }
songbird = { workspace = true }
daichi = { workspace = true }
daichi-commands = { workspace = true }
daichi-handlers = { workspace = true }
daichi-models = { workspace = true }
